# teleparse

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  out
.github/workflows/: book.yml  main.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  example_g.txtpp.md  example_simple_g.txtpp.md  flow.md  intro.md  prelude.md
book/src/lexical_analysis/: derive_lexicon_g.txtpp.md  extracted_g.txtpp.md  (+5 more)
examples/: math.rs  regen_lang.rs  test.rs
macros/: Cargo.toml
macros/src/: ast.rs  derive_ll1_impl.rs  derive_root_impl.rs  derive_to_span_impl.rs  lexer_derive_impl.rs  lexicon.rs  lexicon_logos.rs  lib.rs  node.rs  node_derive_impl.rs  prelude.rs  production.rs  root.rs  sequence.rs  syntax.rs  syntax_tree_derive_impl.rs  to_span.rs  token_type_derive_impl.rs  tuple.rs
main/: Cargo.toml
main/src/: lib.rs
src/: error.rs  lexer.rs  lib.rs  parser.rs  root.rs  syntax_error.rs  syntax_tree.rs  table.rs  test.rs
src/imp/: blanket.rs  iter.rs  mod.rs  node.rs  option.rs  string.rs  token.rs
src/lex/: README.md  README.txtpp.md  error.rs  lexer.rs  lexer_logos.rs  lexicon.rs  map.rs  mod.rs  readme_g.md  readme_g.txtpp.md  set.rs  span.rs  token.rs  token_set.rs  token_storage.rs  vec.rs
src/node/: mod.rs  option.rs  string.rs
src/parser/: context.rs  info.rs  mod.rs  parser.rs  parser_impl.rs  pt.rs  stream.rs  tree.rs
src/syntax/: ast.rs  error.rs  jump.rs  lit_set.rs  metadata.rs  mod.rs  passthrough.rs  root.rs  term_set.rs  terminal.rs
src/table/: first.rs  follow.rs  left_recursive.rs  lit_set.rs  mod.rs  parsing.rs  prod_set.rs  term_set.rs  util.rs
src/token/: README.md  map.rs  mod.rs  token_set.rs  token_storage.rs  token_type.rs
src/tp/: boxed.rs  mod.rs  option.rs  ptr.rs  string.rs  tuple.expanded.rs  tuple.rs
src/tp_impl/: ast_loop.rs  ast_node.rs  ast_one_or_more.rs  ast_option.rs  ast_passthrough.rs  ast_split.rs  blanket.rs  boxed.rs  iter.rs  mod.rs  node.rs  option.rs  punct.rs  punctuated.rs  recover.rs  split.rs  string.rs  tuple.expanded.rs  tuple.rs
tests/: book_ex_recur.rs  book_ex_simple.rs  book_terminal.rs  doc_lex_comment.rs  doc_lex_term_regex.rs  doc_lex_term_simple.rs  first_follow.rs  lexer.rs  ll1_textbook.rs  macrotest.rs  math.rs  semantic.rs  trybuild.rs
tests/expand/: comment.expanded.rs  comment.rs  lexer_example.expanded.rs  lexer_example.rs  lexicon_example.expanded.rs  lexicon_example.rs  node.expanded.rs  pizza.expanded.rs  pizza.rs  syntax_example.expanded.rs  syntax_example.rs  token_type.expanded.rs  token_type.rs  token_type_empty.expanded.rs  token_type_empty.rs  token_type_example.expanded.rs  token_type_example.rs  token_type_repr.expanded.rs
tests/ui/: lex_bad_regex_matches_empty.rs  lex_bad_regex_matches_empty.stderr  lex_bad_regex_start.rs  lex_invalid_ignore_regex.rs  lex_invalid_ignore_regex.stderr  lex_invalid_regex.rs  lex_invalid_regex.stderr  lex_no_dupe_no_literal.stderr  lex_redundant_regex.rs  lex_regex_no_match.rs  lex_regex_no_match.stderr  lex_regex_not_match_is_prefix.rs  lex_regex_not_match_is_prefix.stderr  lex_regex_not_match_start.rs  lex_regex_not_match_start.stderr
(+17 files in other folders)
