[workspace]
resolver = "2"
members = ["macros"]

[package]
name = "teleparse"
version = "0.0.2"
edition = "2021"
description = "teleparse"
license = "MIT"
exclude = ["**/*.expanded.rs", "**/*.txtpp.md"]
repository = "https://github.com/Pistonite/teleparse"
authors = ["Pistonight <terrabyte100k@gmail.com>"]

[dependencies]
bit-set = "0.5.3"
deref-derive = "0.1.0"
teleparse-macros = { path = "macros", version = "=0.0.2" }
num = "0.4.3"
regex = "1.10.4"
thiserror = "1.0.61"
derivative = "2.2.0"
itertools = "0.13.0"

[dev-dependencies]
macrotest = "1.0.12"
trybuild = "1.0.96"
