[package]
name = "teleparse-macros"
version = "0.0.3"
edition = "2021"
description = "Proc-macro crate for teleparse"
repository = "https://github.com/Pistonite/teleparse"
license = "MIT"
authors = ["Pistonight <terrabyte100k@gmail.com>"]

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.83"
quote = "1.0.36"
regex = "1.10.4"
syn = { version = "2.0.66", features = ["full"] }

[lib]
proc-macro = true
